--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,4 +31,4 @@ jobs:
       run : npm install --globally surge
       
     - name: Run Surge
-      run: surge ./ little-skate.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./ littleskate.surge.sh --token ${{secrets.SURGE_TOKEN}}
